--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends-2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://acastankovic89.github.io/robofriends-2",
+  "homepage": "https://acastankovic89.github.io/robofriends-git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
